Cacti CHANGELOG

1.1.37
-issue#1371: Further fix for #1371 due to incorrect sign usage
-issue#1405: When Data Query columns are wide, they cause rendering issues
-issue#1419: CLog: preg_match can blow up log file
-issue#1420: Debian test suite reports issues 
-issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
-issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
-issue#1432: Delete confirmation does not disappear
-issue#1443: Partial Save warnings under Settings -> Mail/Reporting/DNS
-issue#1447: Cli audit_database.php not detecting database name, and failed to create audit tables when run fresh
-issue#1453: Title of add_graphs.php being ignored
-issue#1456: Increase minimum php version maintaining support for RHEL6
-issue#1457: Path-Based Cross-Site Scripting (XSS) issues
-issue#1458: Error in logs when creating new graphs
-issue#1459: Automation filter not applied correctly
-issue: Output message timer not clearing properly on page refresh
-issue: Incorrect default found path of spine
-feature: Updated Chinese Simplified translations
-feature: Updated Dutch translations
-feature: Make LDAP errors consistent across functions
-feature: JavaScript library Chart.js updated 2.7.2 

1.1.36
-issue#934: Template names missing in graph management list
-issue#1211: CDEF and VDEF Item Edit do not use correct procedures
-issue#1250: Language support does not support localization properly
-issue#1331: Log Rotation should occur at midnight on system
-issue#1334: Console->Users->(Edit) Permissions checkmark descriptions missing
-issue#1336: Debian test suite reports php error
-issue#1338: Allow automation to be run in debug mode from GUI
-issue#1339: First graph of second page does not render
-issue#1340: Unable to open Time Graph View in new tab
-issue#1348: Toggle context menu of Zoom
-issue#1351: Errorimage does not render on systems without GD ttf support